--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "persona-webapp",
+  "description": "Persona Webapp is a React project to provide a front-end solution for sls-persona-webapp",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "reactstrap": "^8.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -27,5 +30,21 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "author": "Rodrigo Narvaez",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:ronarvaez/persona-webapp.git"
+  },
+  "bugs": {
+    "url": "https://github.com/ronarvaez/persona-webapp/issues"
+  },
+  "homepage": "https://github.com/ronarvaez/persona-webapp#readme",
+  "keywords": [
+    "React",
+    "Bootstrap",
+    "Graphql",
+    "Apollo",
+    "Hooks"
+  ]
 }
